# ArxivBuddy

./: .gitignore  README.md  arxivSimpler.py  arxiv_reponse_Comment_fonctionne_AlphaFold_p.md  arxiv_reponse_Quels_sont_les_usages_récents_.md  pyproject.toml  requirements.txt
arxivbuddy_memory/: arxivbuddy_ltm.db  chroma.sqlite3
config/: .env.example
config/yaml/: agents.yaml
lib/: __init__.py  agents.py  arxiv_api.py  summarizer.py  tools.py  utils.py
src/arxivbuddy/: __init__.py  cli.py
src/lib/: __init__.py  agents.py  config.py  custom_embedder.py  summarizer.py  utils.py
